--- a/.github/workflows/npm.yaml
+++ b/.github/workflows/npm.yaml
@@ -11,9 +11,9 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v3
         with:
-          node-version: 12
+          node-version: 20
           registry-url: https://npm.pkg.github.com/
-          scope: "@tkssharma"
+          scope: "@optible"
       - run: yarn install
       - run: git config --global user.email "$GITHUB_ACTOR@users.noreply.github.com" && git config --global user.name "$GITHUB_ACTOR"
       - run: yarn version --minor
