--- a/.github/workflows/npm.yaml
+++ b/.github/workflows/npm.yaml
@@ -18,6 +18,6 @@ jobs:
       - run: git config --global user.email "$GITHUB_ACTOR@users.noreply.github.com" && git config --global user.name "$GITHUB_ACTOR"
       - run: yarn version --minor
       - run: git push --tags && git push
-      - run: yarn publish
+      - run: yarn publish --verbose
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
