--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-form-builder2",
+  "name": "@optible/react-form-builder2",
   "version": "0.20.0",
   "description": "A complete form builder for react.",
   "main": "lib/index.js",
