--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
     "express": "^4.17.1",
+    "file-loader": "^6.2.0",
     "multer": "^1.4.2",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
@@ -91,6 +92,7 @@
     "sass": "^1.52.3",
     "sass-loader": "^10.0.0",
     "style-loader": "^1.3.0",
+    "url-loader": "^4.1.1",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.2"
