add nanoid, update multi column support

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "file-saver": "^2.0.5",
     "immutability-helper": "^3.1.1",
     "isomorphic-fetch": "^3.0.0",
+    "nanoid": "^5.0.4",
     "prop-types": "^15.7.2",
     "react-bootstrap-slider": "^2.2.3",
     "react-datepicker": "^3.4.1",
