--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.46.0",
   "description": "A complete form builder for react.",
   "main": "lib/index.js",
+  "type": "module",
   "types": "types/index.d.ts",
   "license": "MIT",
   "repository": {
@@ -24,7 +25,7 @@
     "drop"
   ],
   "engines": {
-    "node": ">=12.0.0"
+    "node": ">= 22.0.0"
   },
   "author": "Kiho Chang",
   "contributors": [
@@ -35,9 +36,10 @@
     }
   ],
   "dependencies": {
+    "@types/react-draft-wysiwyg": "^1.13.8",
     "beedle": "^0.8.1",
     "classnames": "^2.2.6",
-    "date-fns": "^2.16.1",
+    "date-fns": "3.6.0",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.8.4",
     "es6-promise": "^4.2.8",
@@ -47,35 +49,38 @@
     "isomorphic-fetch": "^3.0.0",
     "nanoid": "^3.3.4",
     "prop-types": "^15.7.2",
-    "react-bootstrap-slider": "^2.2.3",
-    "react-datepicker": "^3.4.1",
+    "react-datepicker": "7.3.0",
     "react-dnd": "^11.1.3",
     "react-dnd-html5-backend": "^11.1.3",
-    "react-draft-wysiwyg": "^1.14.7",
-    "react-intl": "^5.24.3",
-    "react-select": "^3.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
+    "react-intl": "6.6.8",
+    "react-select": "5.8.0",
     "react-signature-canvas": "^1.0.3",
-    "react-textarea-autosize": "^7.1.2",
+    "react-textarea-autosize": "8.5.3",
     "xss": "^1.0.8"
   },
   "peerDependencies": {
-    "react": ">=16.8.6",
-    "react-dom": ">=16.8.6"
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.10",
-    "@babel/core": "^7.12.10",
-    "@babel/plugin-proposal-class-properties": "^7.12.1",
-    "@babel/plugin-proposal-json-strings": "^7.12.1",
+    "@babel/core": "^7.24.7",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-json-strings": "^7.18.6",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
+    "@babel/plugin-proposal-optional-chaining": "^7.21.0",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-syntax-import-meta": "^7.10.4",
-    "@babel/plugin-transform-runtime": "^7.17.10",
-    "@babel/preset-env": "^7.12.11",
-    "@babel/preset-react": "^7.14.5",
+    "@babel/plugin-transform-runtime": "^7.24.7",
+    "@babel/preset-env": "^7.24.7",
+    "@babel/preset-react": "^7.24.7",
     "@babel/runtime-corejs2": "^7.12.5",
+    "@types/react": "18.3.0",
+    "@types/react-dom": "18.3.0",
     "add": "^2.0.6",
     "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.2.2",
+    "babel-loader": "^9.1.3",
     "copyfiles": "^2.4.1",
     "css-loader": "^3.6.0",
     "ejs": "^2.7.4",
@@ -87,24 +92,24 @@
     "express": "^4.17.1",
     "file-loader": "^6.2.0",
     "multer": "^1.4.2",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "rimraf": "^3.0.2",
     "sass": "^1.52.3",
     "sass-loader": "^10.0.0",
     "style-loader": "^1.3.0",
     "url-loader": "^4.1.1",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.2"
+    "webpack": "^5.92.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
   },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/"
   },
   "scripts": {
-    "build": "webpack --mode production --config webpack.production.config.js",
+    "build": "webpack --mode production --config webpack.production.config.cjs",
     "build:dev": "webpack --mode development",
-    "build:umd": "webpack --mode development --config webpack.production.config.js",
+    "build:umd": "webpack --mode development --config webpack.production.config.cjs",
     "build:style": "sass ./scss/application.scss dist/app.css --style compressed",
     "build:lib": "npm run transpile && npm run build:style",
     "build:dist": "npm run build && npm run copy:dist",
